--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -10,25 +10,12 @@ ul.a{
     list-style-type:disc;
 }
 
-<style>
-a:link {
-    color: black;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:visited {
-    color: lightgrey;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:hover {
-    color: black;
-    background-color: transparent;
-    text-decoration: underline;
-}
-a:active {
-    color: red;
-    background-color: transparent;
-    text-decoration: underline;
-}
-</style>
+a:link    {color:black; background-color:transparent; text-decoration:none}
+a:visited {color:gray; background-color:transparent; text-decoration:none}
+a:hover   {color:black; background-color:transparent; text-decoration:underline}
+a:active  {color:black; background-color:transparent; text-decoration:underline}
+
+/*a.GroupLink{
+    color:black;
+    text-decoration:none;
+}*/
