--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,6 +1,13 @@
 ﻿body {
 }
 
+#mainbody{
+    padding-left:3em;
+}
+
+#sidebar{
+    padding-top:3em;
+}
 
 h1.title{
     color:darkcyan;
@@ -14,8 +21,3 @@ a:link    {color:black; background-color:transparent; text-decoration:none}
 a:visited {color:gray; background-color:transparent; text-decoration:none}
 a:hover   {color:black; background-color:transparent; text-decoration:underline}
 a:active  {color:black; background-color:transparent; text-decoration:underline}
-
-/*a.GroupLink{
-    color:black;
-    text-decoration:none;
-}*/
